# elastic-constants

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  ruff.toml  tox.toml
.github/workflows/: check.yaml  ci.yaml
docs/: conf.py  index.rst
docs/_static/: switcher.json
docs/user-guide/: index.rst  quantum-espresso.ipynb
docs/user_guide/: ase.ipynb  index.rst  qe.ipynb
src/elastic_constants/: __init__.py  continuum_mechanics.py  crystal.py  tensor.py
tests/: conftest.py  test_crystal.py  test_tensor.py
tests/unit/: test_crystal.py  test_tensor.py  test_tensor_transformation.py
