[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project]
name = "elastic-constants"
version = "0.1.0"
description = "Tools for computing the mechanical properties of crystal structures."
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Robert Grzonka", email = "robert.grzonka@fau.de"},
]
maintainers = [
    {name = "Robert Grzonka", email = "robert.grzonka@fau.de"},
]
keywords = [
    "elastic constants",
    "linear elasticity",
    "materials science",
    "solid-state physics",
    "crystallography",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "spglib>=2.6.0",
]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.10.7",
]

[project.urls]
homepage = "https://pypi.org/project/elastic-constants/"
source = "https://github.com/rastow/elastic-constants"
download = "https://pypi.org/project/elastic-constants/#files"
documentation = "https://elastic-constants.readthedocs.io/en/latest/"
issues = "https://github.com/rastow/elastic-constants/issues"

[dependency-groups]
dev = [
    "tox>=4.32.0",
    "tox-uv>=1.29.0",
    { include-group = "docs" },
    { include-group = "test" },
    { include-group = "style" },
    { include-group = "type" },
]
docs = [
    "ipykernel>=7.1.0",
    "nbsphinx>=0.9.6",
    "numpydoc>=1.9.0",
    "pandas>=2.3.3",
    "pandoc>=2.4",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-copybutton>=0.5.2",
]
package = [
    "check-wheel-contents>=0.6.3",
    "twine>=6.2.0",
]
style = [
    "ruff>=0.14.3",
]
test = [
    "coverage>=7.11.0",
    "pytest>=8.4.2",
]
type = [
    "pyright>=1.1.407",
]

[tool.uv]
python-preference = "only-managed"

[tool.coverage.run]
branch = true
source = ["src", "tests"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    # explicit pragma
    "pragma: no cover",
    # debug-only code
    "def __repr__",
    "if debug:",
    # defensive code
    "raise AssertionError",
    "raise NotImplementedError",
    # non-runnable / typing-related code
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 100
precision = 2
show_missing = true
skip_covered = true
skip_empty = true

[tool.pyright]
include = ["src", "tests"]
verboseOutput = true
typeCheckingMode = "strict"
deprecateTypingAliases = true
enableExperimentalFeatures = true

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "-v",
    "--doctest-modules",
    "--import-mode=importlib",
    "--strict-config",
    "--strict-markers",
]
empty_parameter_set_mark = "xfail"
filterwarnings = ["error"]
minversion = "8.4"
pythonpath = "src"
testpaths = ["src", "tests"]
xfail_strict = true
